--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <main>
-      <h1>Дмитрий</h1>
-      <h2>Python developer</h2>
+      <h1>Bykouski Dzmitry</h1>
+      <h2>Programer</h2>
       <section>
         <h2>Образование</h2>
         <ul>
