--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <main>
       <h1>Bykouski Dzmitry</h1>
-      <h2>Programer</h2>
+      <h2>Computer programer</h2>
       <section>
         <h2>Образование</h2>
         <ul>
