--- a/index.html
+++ b/index.html
@@ -10,24 +10,28 @@
     <main>
       <h1>Bykouski Dzmitry</h1>
       <h2>Computer programer</h2>
-      <section>
-        <h2>Образование</h2>
-        <ul>
-          <li>Гомельском государственном университете им. Ф. Скорины.</li>
-          <li>Гомельском государственном дорожно-строительном колледже.</li>
-        </ul>
-      </section>
-      <section>
-        <h2>Навыки</h2>
-        <ul>
-          <li>Умею писать хорошо читаемый код.</li>
-          <li>В том числе и на HTML</li>
-        </ul>
-      </section>
+      <div>
+        <section>
+          <h2>Образование</h2>
+          <ul>
+            <li>Гомельском государственном университете им. Ф. Скорины.</li>
+            <li>Гомельском государственном дорожно-строительном колледже.</li>
+          </ul>
+        </section>
+        <section>
+          <h2>Навыки</h2>
+          <ul>
+            <li>Умею писать хорошо читаемый код.</li>
+            <li>В том числе и на HTML</li>
+          </ul>
+        </section>
+      </div>
+      <div>
       <section>
         <h2>Дополнительная информация</h2>
         <p>Дружелюбен. Общителен. Жизнерадостен.</p>
       </section>
+      </div>
     </main>
   </body>
 </html>
